// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Snapshot Snapshot of Modal for add book use 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Modal)>
    <Modal
      addBook={[Function]}
      addExchange={[Function]}
      addRequest={[Function]}
      btnuse="addbook"
      closeBook={[Function]}
      email={null}
      getUsersLocation={[Function]}
      info={
        Object {
          "authors": Array [],
          "bookId": "",
          "categories": Array [],
          "description": "",
          "imageUrl": "",
          "ownBy": Array [],
          "publishedDate": "",
          "publisher": "",
          "title": "",
        }
      }
      open={true}
      outrequests={Array []}
      ownedbooks={Array []}
      ownerslocation={Array []}
      removeBook={[Function]}
      tologin={false}
      username={null}
    >
      <div>
        <Connect(Alert)>
          <Alert
            closeAlert={[Function]}
            open={true}
          >
            <div>
              <div
                className="alert alert-warning alert-dismissible fade show"
                role="alert"
              >
                <strong>
                  Oops! Something went wrong!
                </strong>
                 The action just failed. Please try again later.
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="alert"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
            </div>
          </Alert>
        </Connect(Alert)>
        <div
          className="overlay open"
        />
        <div
          className="modal show"
          style={
            Object {
              "display": "block",
              "overflowY": "scroll",
            }
          }
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                />
                <button
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <dl>
                  <dt>
                    <img
                      alt=""
                      className="img-thumbnail"
                      src=""
                    />
                  </dt>
                  <div>
                    <dt>
                      Author
                    </dt>
                    <dd />
                  </div>
                  <dt>
                    Publisher
                  </dt>
                  <dd />
                  <dt>
                    Published
                  </dt>
                  <dd />
                  <dd />
                </dl>
                <button
                  className="btn btn-raised bg-dark text-light"
                  onClick={[Function]}
                >
                  Add to my books
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Modal>
  </Connect(Modal)>
</Provider>
`;

exports[`Modal Snapshot Snapshot of Modal for add request use 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Modal)>
    <Modal
      addBook={[Function]}
      addExchange={[Function]}
      addRequest={[Function]}
      btnuse="addrequest"
      closeBook={[Function]}
      email={null}
      getUsersLocation={[Function]}
      info={
        Object {
          "authors": Array [],
          "bookId": "",
          "categories": Array [],
          "description": "",
          "imageUrl": "",
          "ownBy": Array [],
          "publishedDate": "",
          "publisher": "",
          "title": "",
        }
      }
      open={true}
      outrequests={Array []}
      ownedbooks={Array []}
      ownerslocation={Array []}
      removeBook={[Function]}
      tologin={false}
      username={null}
    >
      <div>
        <Connect(Alert)>
          <Alert
            closeAlert={[Function]}
            open={true}
          >
            <div>
              <div
                className="alert alert-warning alert-dismissible fade show"
                role="alert"
              >
                <strong>
                  Oops! Something went wrong!
                </strong>
                 The action just failed. Please try again later.
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="alert"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
            </div>
          </Alert>
        </Connect(Alert)>
        <div
          className="overlay open"
        />
        <div
          className="modal show"
          style={
            Object {
              "display": "block",
              "overflowY": "scroll",
            }
          }
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                />
                <button
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <dl>
                  <dt>
                    <img
                      alt=""
                      className="img-thumbnail"
                      src=""
                    />
                  </dt>
                  <div>
                    <dt>
                      Author
                    </dt>
                    <dd />
                  </div>
                  <dt>
                    Publisher
                  </dt>
                  <dd />
                  <dt>
                    Published
                  </dt>
                  <dd />
                  <dd />
                </dl>
                <div>
                  <table
                    className="table"
                  >
                    <thead>
                      <tr>
                        <th
                          scope="col"
                        >
                          Owner
                        </th>
                        <th
                          scope="col"
                        >
                          Location
                        </th>
                        <th
                          scope="col"
                        />
                      </tr>
                    </thead>
                    <tbody />
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Modal>
  </Connect(Modal)>
</Provider>
`;

exports[`Modal Snapshot Snapshot of Modal for answer sender use 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Modal)>
    <Modal
      addBook={[Function]}
      addExchange={[Function]}
      addRequest={[Function]}
      btnuse="answersender"
      closeBook={[Function]}
      email={null}
      getUsersLocation={[Function]}
      info={
        Object {
          "authors": Array [],
          "bookId": "",
          "categories": Array [],
          "description": "",
          "imageUrl": "",
          "ownBy": Array [],
          "publishedDate": "",
          "publisher": "",
          "title": "",
        }
      }
      open={true}
      outrequests={Array []}
      ownedbooks={Array []}
      ownerslocation={Array []}
      removeBook={[Function]}
      tologin={false}
      username={null}
    >
      <div>
        <Connect(Alert)>
          <Alert
            closeAlert={[Function]}
            open={true}
          >
            <div>
              <div
                className="alert alert-warning alert-dismissible fade show"
                role="alert"
              >
                <strong>
                  Oops! Something went wrong!
                </strong>
                 The action just failed. Please try again later.
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="alert"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
            </div>
          </Alert>
        </Connect(Alert)>
        <div
          className="overlay open"
        />
        <div
          className="modal show"
          style={
            Object {
              "display": "block",
              "overflowY": "scroll",
            }
          }
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                />
                <button
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <dl>
                  <dt>
                    <img
                      alt=""
                      className="img-thumbnail"
                      src=""
                    />
                  </dt>
                  <div>
                    <dt>
                      Author
                    </dt>
                    <dd />
                  </div>
                  <dt>
                    Publisher
                  </dt>
                  <dd />
                  <dt>
                    Published
                  </dt>
                  <dd />
                  <dd />
                </dl>
                <button
                  className="btn btn-raised bg-dark text-light"
                  onClick={[Function]}
                >
                  Exchange
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Modal>
  </Connect(Modal)>
</Provider>
`;

exports[`Modal Snapshot Snapshot of Modal for remove book use 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Modal)>
    <Modal
      addBook={[Function]}
      addExchange={[Function]}
      addRequest={[Function]}
      btnuse="removebook"
      closeBook={[Function]}
      email={null}
      getUsersLocation={[Function]}
      info={
        Object {
          "authors": Array [],
          "bookId": "",
          "categories": Array [],
          "description": "",
          "imageUrl": "",
          "ownBy": Array [],
          "publishedDate": "",
          "publisher": "",
          "title": "",
        }
      }
      open={true}
      outrequests={Array []}
      ownedbooks={Array []}
      ownerslocation={Array []}
      removeBook={[Function]}
      tologin={false}
      username={null}
    >
      <div>
        <Connect(Alert)>
          <Alert
            closeAlert={[Function]}
            open={true}
          >
            <div>
              <div
                className="alert alert-warning alert-dismissible fade show"
                role="alert"
              >
                <strong>
                  Oops! Something went wrong!
                </strong>
                 The action just failed. Please try again later.
                <button
                  aria-label="Close"
                  className="close"
                  data-dismiss="alert"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
              </div>
            </div>
          </Alert>
        </Connect(Alert)>
        <div
          className="overlay open"
        />
        <div
          className="modal show"
          style={
            Object {
              "display": "block",
              "overflowY": "scroll",
            }
          }
        >
          <div
            className="modal-dialog"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                />
                <button
                  className="close"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    ×
                  </span>
                </button>
              </div>
              <div
                className="modal-body"
              >
                <dl>
                  <dt>
                    <img
                      alt=""
                      className="img-thumbnail"
                      src=""
                    />
                  </dt>
                  <div>
                    <dt>
                      Author
                    </dt>
                    <dd />
                  </div>
                  <dt>
                    Publisher
                  </dt>
                  <dd />
                  <dt>
                    Published
                  </dt>
                  <dd />
                  <dd />
                </dl>
                <button
                  className="btn btn-raised bg-dark text-light"
                  onClick={[Function]}
                >
                  Remove from my books
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Modal>
  </Connect(Modal)>
</Provider>
`;
